added alt tags for images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       <article class="card-1-cyan">
         <h1>Supervisor</h1>
         <p>Monitors activity to identify project roadblocks</p>
-        <img src="./images/icon-supervisor.svg" />
+        <img
+          src="./images/icon-supervisor.svg"
+          alt="magnifying glass with eye"
+        />
       </article>
 
       <div class="two-card-container">
@@ -41,20 +44,20 @@
           <p>
             Scans our talent network to create the optimal team for your project
           </p>
-          <img src="./images/icon-team-builder.svg" />
+          <img src="./images/icon-team-builder.svg" alt="browser screen" />
         </article>
 
         <article class="card-3-orange">
           <h1>Karma</h1>
           <p>Regularly evaluates our talent to ensure quality</p>
-          <img src="./images/icon-karma.svg" />
+          <img src="./images/icon-karma.svg" alt="lit lightbulb" />
         </article>
       </div>
 
       <article class="card-4-blue">
         <h1>Calculator</h1>
         <p>Uses data from past projects to provide better delivery estimates</p>
-        <img src="./images/icon-calculator.svg" />
+        <img src="./images/icon-calculator.svg" alt="computer screen" />
       </article>
     </main>
 
